...
              snap: true,
              backgroundColor: const Color(0xFF212121),
              expandedHeight: 100,
              flexibleSpace: FlexibleSpaceBar(
                centerTitle: true,
                title: Text(
                  'POKÉDEX',
                  style: typography.heading(16, Colors.white),
                ),
              ),
              actions: [
                Container(
                  margin: const EdgeInsets.only(right: 16),
...
