...

                    Text(
                      "Base Stats",
                      style: typography.body(20, Colors.black, fontWeight: FontWeight.bold),
                    ),
                    const SizedBox(height: 16),
                    _buildStatRow("HP", pokemon.stats['hp'] ?? 0, Colors.red),
                    _buildStatRow(
                      "Attack",
                      pokemon.stats['attack'] ?? 0,
                      Colors.orange,
                    ),
                    _buildStatRow(
...
